# option-analyzer

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.beads/: config.json
.beads/issues/: options-1.md  options-10.md  options-11.md  options-12.md  options-13.md  options-14.md  options-15.md  options-16.md  options-17.md  options-18.md  options-19.md  options-2.md  options-20.md  options-21.md  options-22.md  options-23.md  options-24.md  options-25.md  options-26.md  options-27.md  options-28.md  options-29.md  options-3.md  options-30.md  options-31.md  options-32.md  options-33.md  options-34.md  options-35.md  options-36.md  options-4.md  options-5.md  options-6.md  options-7.md  options-8.md  options-9.md
config/: config.yaml.example
notebooks/: 01_connect_and_explore.ipynb  02_position_analysis.ipynb  03_greeks_dashboard.ipynb  04_vol_surfaces.ipynb  05_spx_bwb_analysis.ipynb  06_dstfs_trend_analysis.ipynb  07_borg_debugging.ipynb
src/options_analyzer/: __init__.py  factory.py
tests/: factories.py  test_factories.py  test_factory.py
tests/test_adapters/: test_account.py  test_candle_fetching.py  test_integration.py  test_mapping.py  test_market_data.py  test_session.py  test_streaming.py  test_streaming_integration.py  test_yfinance_candles.py
tests/test_config/: test_loader.py  test_schema.py
tests/test_domain/: test_candles.py  test_enums.py  test_greeks.py  test_models.py
tests/test_engine/: test_atr_bollinger.py  test_borg_transwarp.py  test_bsm.py  test_bsm_properties.py  test_ema_cloud.py  test_force_index.py  test_ivts.py  (+7 more)
(+52 files in other folders)
