[project]
name = "options-analyzer"
version = "0.1.0"
description = "Options position analyzer with first and second-order Greeks, TastyTrade integration, and Bloomberg-themed visualization"
authors = [
    {name = "Jason Olinger", email = "jasonolinger@fastmail.com"},
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "plotly>=5.18",
    "pyyaml>=6.0",
    "tastytrade>=11.1",
]

[project.optional-dependencies]
jupyter = [
    "jupyterlab>=4.0",
    "ipywidgets>=8.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "hypothesis>=6.0",
    "ruff",
    "mypy",
    "types-PyYAML",
    "scipy-stubs>=1.17.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/options_analyzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring TastyTrade credentials (deselect with '-m \"not integration\"')",
    "slow: marks slow tests like hypothesis property tests (deselect with '-m \"not slow\"')",
]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["options_analyzer"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["plotly.*"]
ignore_missing_imports = true
follow_untyped_imports = false

[tool.ruff]
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
